# indicate

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: common.h  draw.c  draw.h  gui.c  gui.h  main.c
